--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,2 +1,10 @@
-<h3><%= link_to 'Log in', login_path %></h3>
-<h3><%= link_to 'Log out', logout_path, :method => :delete %></h3>
+<ul class="nav navbar-nav navbar-right">
+    <li>
+        <% if logged_in? %>
+            I am <%= current_user.name %>
+            <%= link_to 'Log out', logout_path, :method => :delete %></li>
+        <% elsif !logged_in? %>
+            <li><%= link_to 'Log in', login_path %></li>
+        <% end %>
+    <li><%= link_to 'Make a Post', new_post_path %></li>
+</ul>
